<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.oleksandr.discount.activity.LoginActivity"
        android:background="@drawable/bg_start">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.26"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:id="@+id/textView"
            android:textColor="@color/colorTextWhite"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.79"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:text="@string/login_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorTextWhite"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.13999999"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.18"/>

    <EditText
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/colorTextWhite"
            android:ems="10"
            android:id="@+id/etext_number"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/login_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:drawableEnd="@drawable/arrow_right_yellow"
            android:textColor="@color/colorTextYellow"
            android:id="@+id/text_next"
            app:layout_constraintEnd_toEndOf="@+id/etext_number"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etext_number"
            />

    <TextView
            tools:text="@string/login_text_licence"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextWhite"
            android:textSize="13sp"
            android:id="@+id/text_licence"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:autoLink="none"
            android:contextClickable="false"
            android:textStyle="normal"/>

</android.support.constraint.ConstraintLayout>
