<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.oleksandr.discount.activity.SignUpActivity"
            android:background="@drawable/bg_start">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:id="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.26"/>

        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:id="@+id/textView"
                android:textColor="@color/colorTextWhite"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.79"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/login_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextWhite"
                android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.13999999"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.18"/>

        <EditText
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/colorTextWhite"
                android:ems="10"
                android:id="@+id/et_number"
                android:background="@null"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/et_number"
                app:layout_constraintStart_toStartOf="@id/et_number"
                app:layout_constraintEnd_toEndOf="@id/et_number"
                android:id="@+id/view"/>

        <TextView
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextWhite"
                android:id="@+id/text_password"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_number"
                android:text="@string/sign_up_password_sms"
                app:layout_constraintStart_toStartOf="@+id/et_number"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="@+id/et_number"
                />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"
                android:background="@null"
                android:id="@+id/et_password"
                app:layout_constraintStart_toStartOf="@+id/et_number"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.875"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_password"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                android:id="@+id/view2"/>

        <TextView
                android:text="@string/sign_up_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:drawableEnd="@drawable/arrow_right_yellow"
                android:textColor="@color/colorTextYellow"
                android:id="@+id/text_confirm"
                app:layout_constraintEnd_toEndOf="@+id/et_number"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                android:layout_marginTop="8dp"/>

        <ImageView
                android:src="@drawable/arrow_back_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_back"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                android:layout_marginTop="8dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>