<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.oleksandr.discount.activities.login.SignInActivity"
            android:background="@drawable/bg_start"
            android:fitsSystemWindows="true"
            >


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:id="@+id/iv_nav_photo_user"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.26"/>

        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:id="@+id/textView"
                android:textColor="@color/colorTextWhite"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/iv_nav_photo_user"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.79"
                app:layout_constraintTop_toTopOf="@+id/iv_nav_photo_user"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_nav_photo_user"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/login_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextWhite"
                android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.13999999"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.18"/>

        <EditText
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/colorTextWhite"
                android:background="@null"
                android:ems="10"
                android:id="@+id/et_number"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/et_number"
                app:layout_constraintStart_toStartOf="@id/et_number"
                app:layout_constraintEnd_toEndOf="@id/et_number"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextWhite"
                android:id="@+id/text_password"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_number"
                android:text="@string/sign_in_password"
                app:layout_constraintStart_toStartOf="@+id/et_number"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"
                android:background="@null"
                android:id="@+id/et_password"
                app:layout_constraintStart_toStartOf="@+id/et_number"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.875"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_password"
                android:inputType="textPassword"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                android:id="@+id/view"/>

        <TextView
                android:text="@string/sign_in_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:drawableEnd="@drawable/arrow_right_yellow"
                android:textColor="@color/colorTextYellow"
                android:id="@+id/text_confirm"
                app:layout_constraintEnd_toEndOf="@+id/et_number"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/sign_in_forgot_password"
                android:textSize="20sp"
                android:textColor="@color/colorTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_forgot_password"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                android:layout_marginTop="8dp"/>


        <ImageView

                android:src="@drawable/button_register_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_facebook"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="1.0"/>

        <TextView
                android:text="Через FACEBOOK"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_facebook"
                app:layout_constraintStart_toStartOf="@+id/image_facebook"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/image_facebook"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/image_facebook"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/image_facebook"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/guideline2"
                app:layout_constraintGuide_begin="548dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="123dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="580dp"
                app:layout_constraintVertical_bias="0.66999996"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
